# tora

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README-rust-svelte.md  README.md  build-and-serve.sh  cloudbuild.yaml  dev.sh  docker-compose.yaml  port-to-mac.md  schema.sql  start-dev.sh  start-docker.sh  sync-db.sh  up.sql
.github/workflows/: main.yml  precommit-trigger.yml  python-tests.yml
.idx/: dev.nix
api/: Cargo.toml  Dockerfile  build.rs  cloudbuild.yaml  schema.sql
api/src/: main.rs  ntypes.rs  settings.rs  state.rs
api/src/handlers/: api_key.rs  dashboard.rs  experiment.rs  health.rs  invitation.rs  log.rs  metric.rs  mod.rs  ping.rs  result.rs  role.rs  stream.rs  user.rs  workspace.rs
api/src/middleware/: auth.rs
api/src/repos/: workspace.rs
api/src/types/: core.rs  error.rs  mod.rs  network.rs
api/src/worker/: outbox_worker.rs
business_strategies/@business_strategies/: v0.md
docs/: features.md
ios/: .swift-format.json  .swiftlint.yml  Makefile
ios/ios/: Colors.swift  ContentView.swift  Font+Inter.swift  Info.plist  Item.swift  icon.swift  iosApp.swift
ios/ios.xcodeproj/: project.pbxproj
ios/ios/Views/: LoginView.swift
ios/tora/: App.swift  Colors.swift  ContentView.swift  Font+Inter.swift  Info.plist  Item.swift
ios/tora/App/: AppRootView.swift  MainAppView.swift  ToraApp.swift
ios/tora/Components/: ToraButton.swift  WorkspaceCard.swift  WorkspaceSelector.swift
ios/tora/Core/Configuration/: AppConfig.swift
ios/tora/Core/Models/: ExperimentModels.swift  WorkspaceModels.swift
ios/tora/Core/Networking/: APIClient.swift  APIResponse.swift  ServiceError.swift
ios/tora/Core/Services/: Auth.swift  AuthService.swift  Config.swift  ExperimentService.swift  Workspace.swift  WorkspaceService.swift
ios/tora/Core/Utilities/: PerformanceMetrics.swift
ios/tora/Design/: Colors.swift  Components.swift  DesignSystem.swift  DesignSystemIndex.swift  DesignTokens.swift  Icons.swift  Layout.swift  README.md  Theme.swift  Typography.swift
ios/tora/Lib/: Auth.swift
ios/tora/Screens/: ExperimentsView.swift  LoginView.swift  MainAppView.swift  SettingsView.swift  WorkspacesView.swift
ios/tora/Services/: Auth.swift  Config.swift  Experiment.swift  Performance.swift  Workspace.swift
ios/tora/Shared/Components/: ToraButton.swift
ios/tora/Shared/Design/: AppThemeEnvironment.swift
ios/tora/Shared/Extensions/: Date+Formatting.swift
ios/tora/Views/: LoginFormSheet.swift  LoginView.swift  MainAppView.swift
python/: .flake8  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml
python/examples/: basic_usage.py  pytorch_integration.py
python/scripts/: dpr.py  huggingface_sentiment_analysis.py  imagenette_training.py  imdb_mlm.py  imdb_mlm_training.py  imdb_sa.py  imdb_setfit.py  load_experiment.py  logistic_regression.py  mnist_training.py  nlp_training.py  recommender_system.py  reinforcement_learning.py  saturate_backend.py  stable.py  stream_metrics.py  test_resume.py  text_classification.py  time_series_forecasting.py  topic_modeling_lda.py  tora_template.py  wave2vec.py  whisper.py
python/tests/: __init__.py  conftest.py  pytest.ini  test_client.py  test_exceptions.py  test_http.py  test_validation.py  test_wrapper.py
python/tora/: __init__.py  _client.py  _config.py  _exceptions.py  _http.py  _types.py  _validation.py  _wrapper.py  client.py  tora.py  wrapper.py
web/: .dockerignore  .env.example  .prettierignore  AGENTS.md  Dockerfile  cloudbuild.yaml  package.json  pnpm-lock.yaml  server.js  svelte.config.js  vite.config.ts
web-new/: .prettierignore  package.json  pnpm-lock.yaml  svelte.config.js
web-new/src/: app.css  app.html
web-new/src/lib/content/: quick-start.txt
web-new/src/lib/landing-page/: viz.svelte
web-new/src/lib/logo_assets/: icon.svelte  logo.svelte
web-new/src/routes/: +page.svelte
web-new/src/routes/error/: +page.svelte
web-new/src/routes/login/: +page.svelte
web-new/src/routes/signup/: +page.svelte
web/docs/: catppuccin_colors.json  cattpuccin_style_guide.md  schema.sql  tokyonightlights_colors.md
web/glassmorphism_example/: hyperparam.ts  metrics.ts  page.ts
web/src/: app.css  app.d.ts  app.html  hooks.server.ts
web/src/lib/: api.ts  index.ts  server-api.ts  types.ts
web/src/lib/chart/: options.ts  theme.ts
web/src/lib/components/: ChartToolbar.svelte  card.svelte  comparison-toolbar.svelte  create-experiment-form.svelte  create-experiment-modal.svelte  dashboard-card.svelte  delete-confirmation-modal.svelte  edit-experiment-modal.svelte  experiment-detailed.svelte  experiment-detailed.test.ts  experiment-simple.svelte  experiment-simple.test.ts  experiments-list.svelte  experiments-list.test.ts  header.svelte  index.ts  interactive-chart.svelte  landing-page-v2.svelte  landing-page.svelte  left-right-starfield.svelte  new-experiment-card.svelte  page-header.md  page-header.svelte  pending-invitations.svelte  public-experiments.svelte  recent-activity.svelte  recent-experiments.svelte  simple-landing-page.svelte  star-catalog.ts  starfield-simple.svelte  starfield.svelte  theme-toggle.svelte  toolbar.svelte  tv-screen.svelte  workspace-members.svelte  workspace-role-badge.svelte  workspace-share-modal.svelte  workspace-switcher.svelte
web/src/lib/content/: getting-started.md  index.ts  quick-start.txt  user-guide.md
web/src/lib/server/: broadcast.ts  database.ts  database.types.ts  llm.ts
web/src/lib/state/: app.svelte.ts  modal.svelte.ts  theme.svelte.ts  toolbar.svelte.ts  ui-utils.svelte.ts
web/src/lib/utils/: persistentCache.ts  timing.ts
web/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +layout.ts  +page.server.ts  +page.svelte
web/src/routes/app/: +page.svelte
web/src/routes/auth/: +page.server.ts  +page.svelte
web/src/routes/compare/: +page.server.ts  +page.svelte  bar-chart.svelte.ts  radar-chart.svelte.ts  scatter-chart.svelte.ts
web/src/routes/dashboard/: +layout.svelte  (+14 more)
workspaces/: create-workspace-modal.svelte
workspaces/[slug]/: +page.server.ts  +page.svelte
(+131 files in other folders)
