[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
] }
supabase-auth = "0.10.13"
tokio = { version = "1.45", features = [
  "rt-multi-thread", # the scheduler
  "macros",          # #[tokio::main]/#[tokio::test]
  "net",             # TcpStream/UnixStream for Postgres sockets
  "time",            # sleep(), timeouts used by sqlx’s pool
  "sync",            # channels, Mutex, Semaphore used by sqlx
  "signal",          # tokio::signal
] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
